src/objects/TR1__EmploymentHistory__c.object
<CustomObject>
    <fields>
        <fullName>RC_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RC_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment History</relationshipLabel>
        <relationshipName>Employment_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__EmployeeHistoryExtID__c</fullName>
        <formula>TR1__Title__c  &amp;&apos;:&apos;&amp;  TR1__EmployerName__c &amp;&apos;:&apos;&amp;TR1__StartDate__c</formula>
        <label>Employee History Ext ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EmployerName__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EndDate__c</fullName>
        <label>End Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__StartDate__c</fullName>
        <label>Start Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EMP-{0000000000}</displayFormat>
        <label>Employment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>